--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./img/icon-navegador.png" type="image/png">
-    <title>Formulário</title>
+
+    <link rel="icon" href="./assets/img/icon-navegador.png" type="image/png">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <title>Formulário de Cadastro</title>
 </head>
 <body>
     
