--- a/index.html
+++ b/index.html
@@ -9,8 +9,66 @@
 
     <title>Formulário de Cadastro</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+
+        <div class="form-image">
+            <img src="./assets/img/illustrative-image.svg" alt="Imagem de formulário">
+        </div>
+
+        <div class="form">
+
+            <form action="#">
+
+                <div class="form-header">
+
+                    <div class="title">
+                        <h1>Cadastre-se</h1>
+                    </div>
+
+                    <div class="login-button">
+                        <button><a href="#">Entrar</a></button>
+                    </div>
+
+                </div>
+
+                <div class="input-group">
+
+                    <div class="input-box">
+                        <label for="firstname">Primeiro Nome</label>
+                        <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="lastname">Sobrenome</label>
+                        <input id="lastname" type="text" name="lastname" placeholder="Digite seu Sobrenome" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="email">E-mail</label>
+                        <input id="email" type="email" name="email" placeholder="Digite seu E-mail" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="number">Celular</label>
+                        <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="password">Senha</label>
+                        <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="password">Confirme a sua Senha</label>
+                        <input id="password" type="password" name="Confirmpassword" placeholder="Confirme sua senha" required>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
 
