Adiciona botão de confirmação

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                     <div class="gender-title">
                         <h6>Gênero</h6>
                     </div>
-
                     <div class="gender-group">
                         <div class="gender-input">
                             <input id="female" type="radio" name="gender">
@@ -87,9 +86,11 @@
                             <input id="none" type="radio" name="gender">
                             <label for="none">Prefiro não Informar</label>
                         </div>
-
                     </div>
+                </div>
 
+                <div class="continue-button">
+                    <button><a href="#">Continuar</a></button>
                 </div>
 
             </form>
